<resources>
  <string name="app_name">CleanRecords</string>

  <string name="total">Total</string>
  <string name="colon">:</string>
  <string name="edit">Edit</string>
  <string name="records">Records</string>
  <string name="add">Add</string>
  <string name="save">Save</string>
  <string name="delete">Delete</string>
  <string name="name">Name</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="english">English</string>
  <string name="math">Math</string>
  <string name="science">Science</string>

  <string name="message_confirm_delete_student">Are you sure you want to delete "%1$s"?</string>
  <string name="his_total_score">%1$s\'s total score</string>
  <string name="message_error_get_records">Failed to get records.</string>
  <string name="message_save_success">Save success!</string>
</resources>
