<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.constraint.ConstraintLayout
    android:id="@+id/layout_header"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:background="@android:color/darker_gray"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <Button
      android:id="@+id/button_delete"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="4dp"
      android:text="@string/delete"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/button_save" />

    <Button
      android:id="@+id/button_save"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/save"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  </android.support.constraint.ConstraintLayout>

  <EditText
    android:id="@+id/edit_text_name"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:padding="8dp"
    android:inputType="text"
    android:hint="@string/name"
    app:layout_constraintTop_toBottomOf="@id/layout_header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

  <RadioGroup
    android:id="@+id/radio_group_gender"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:padding="8dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    app:layout_constraintTop_toBottomOf="@id/edit_text_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <RadioButton
      android:id="@+id/radio_button_male"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/male" />

    <RadioButton
      android:id="@+id/radio_button_female"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/female" />

  </RadioGroup>

</android.support.constraint.ConstraintLayout>
