<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.constraint.ConstraintLayout
    android:id="@+id/layout_header"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:background="@android:color/darker_gray"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_marginStart="4dp"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent">

      <TextView
        android:id="@+id/text_view_his_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/his_total_score" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon" />

      <TextView
        android:id="@+id/text_view_total_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp" />

    </LinearLayout>

  </android.support.constraint.ConstraintLayout>

  <LinearLayout
    android:id="@+id/layout_english"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    app:layout_constraintTop_toBottomOf="@id/layout_header"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/english" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/colon" />

    <TextView
      android:id="@+id/text_view_english_score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/layout_math"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    app:layout_constraintTop_toBottomOf="@id/layout_english"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/math" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/colon" />

    <TextView
      android:id="@+id/text_view_math_score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/layout_science"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    app:layout_constraintTop_toBottomOf="@id/layout_math"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/science" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/colon" />

    <TextView
      android:id="@+id/text_view_science_score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp" />

  </LinearLayout>

</android.support.constraint.ConstraintLayout>
